--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,8 +1,13 @@
+astunparse==1.6.3
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
+Flask-Cors==3.0.10
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+pdoc==7.1.1
+Pygments==2.9.0
 python-dotenv==0.17.1
+six==1.16.0
 Werkzeug==2.0.1
