--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/express": "^4.17.12",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.14",
     "@types/react-router-dom": "^5.1.7",
+    "concurrently": "^6.2.0",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -25,6 +29,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "start": "concurrently \"react-scripts start\" \"yarn start:flask-windows\"",
     "start:react": "react-scripts start",
     "start:flask-windows": "cd api && venv\\Scripts\\flask run --no-debugger",
     "start:flask-bash": "cd api && venv/bin/flask run --no-debugger",
